--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
@@ -168,5 +168,12 @@
   "telecom_pack_migration_offers_debit_mention_1": "(1) Até 92 Mb/s desceram em VDSL e 22 Mb/s em ADSL, consoante a elegibilidade.",
   "telecom_pack_migration_offers_debit_mention_2": "(2) Até 36 Mb/s montante em VDSL e 1 Mb/s em ADSL, consoante a elegibilidade.",
   "telecom_pack_migration_modem_keep": "Desejo manter o meu modem ({{ price }} s/IVA/mês)",
-  "telecom_pack_migration_confirm_modem_rental": "Locação modem"
+  "telecom_pack_migration_confirm_modem_rental": "Locação modem",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 5M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO &amp; OPÇÃO CONFORT 20M ({{ price }}/mês + IVA)",
+  "telecom_pack_migration_no_gtr": "Nenhum GTR"
 }
