--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_fr_CA.json
@@ -45,13 +45,13 @@
   "telecom_pack_migration_add_domains_upto": "Ajoutez jusqu'à {{ max }} domaines",
   "telecom_pack_migration_domain_additional_text": "/domaine",
   "telecom_pack_migration_gtr_title": "GTR (si éligible)",
-  "telecom_pack_migration_gtr_4ho_available": "GTR 4HO disponible",
-  "telecom_pack_migration_gtr_10ho_available": "GTR 10HO disponible",
-  "telecom_pack_migration_gtr_5m_4ho_available": "GTR 4HO & OPTION CONFORT 5M disponible",
-  "telecom_pack_migration_gtr_5m_10ho_available": "GTR 10HO & OPTION CONFORT 5M disponible",
-  "telecom_pack_migration_gtr_20m_4ho_available": "GTR 4HO & OPTION CONFORT 20M disponible",
-  "telecom_pack_migration_gtr_20m_10ho_available": "GTR 10HO & OPTION CONFORT 20M disponible",
-  "telecom_pack_migration_gtr_add": "Ajouter cette GTR",
+  "telecom_pack_migration_gtr_4ho": "GTR 4HO ({{ price }} HT/mois)",
+  "telecom_pack_migration_gtr_10ho": "GTR 10HO ({{ price }} HT/mois)",
+  "telecom_pack_migration_gtr_5m_4ho": "GTR 4HO & OPTION CONFORT 5M ({{ price }} HT/mois)",
+  "telecom_pack_migration_gtr_5m_10ho": "GTR 10HO & OPTION CONFORT 5M ({{ price }} HT/mois)",
+  "telecom_pack_migration_gtr_20m_4ho": "GTR 4HO & OPTION CONFORT 20M ({{ price }} HT/mois)",
+  "telecom_pack_migration_gtr_20m_10ho": "GTR 10HO & OPTION CONFORT 20M ({{ price }} HT/mois)",
+  "telecom_pack_migration_no_gtr": "Aucune GTR",
   "telecom_pack_migration_offer_choice": "Choix de l'offre",
   "telecom_pack_migration_offer_choice_error_loading": "Oups ! Nous ne parvenons pas à charger les offres disponibles pour votre pack.",
   "telecom_pack_migration_offer_choice_no_offers": "Aucun changement d'offre n'est disponible avec votre offre actuelle.",
