--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
@@ -128,5 +128,12 @@
   "pack_move_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
   "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit.",
   "pack_move_modem_keep": "Ich möchte mein Modem ({{ price }} ohne MwSt / Monat) beibehalten",
-  "pack_move_confirm_modem_rental": "Modem-Miete"
+  "pack_move_confirm_modem_rental": "Modem-Miete",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPTION KOMFORT 5M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPTION KOMFORT 20M ({{ price }} ohne MwSt / Monat)",
+  "pack_move_no_gtr": "Keine GTR"
 }
