--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_pl_PL.json
@@ -138,5 +138,12 @@
   "pack_move_offers_debit_mention_1": "(1) Aż do 92 Mb/s łączących się w VDSL i 22 Mb/s w ADSL, w zależności od dostępności.",
   "pack_move_offers_debit_mention_2": "(2) Do 36 Mb/s w VDSL i 1 Mb/s w ADSL, w zależności od dostępności.",
   "pack_move_modem_keep": "Chcę zachować modem ({{ price }} netto/m-c)",
-  "pack_move_confirm_modem_rental": "Dzierżawa modemu"
+  "pack_move_confirm_modem_rental": "Dzierżawa modemu",
+  "pack_move_gtr_4ho": "GTR 4HO ({{ price }} netto/m-c)",
+  "pack_move_gtr_10ho": "GTR 10HO ({{ price }} netto/m-c)",
+  "pack_move_gtr_5m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "pack_move_gtr_5m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 5M ({{ price }} netto/m-c)",
+  "pack_move_gtr_20m_4ho": "GTR 4HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "pack_move_gtr_20m_10ho": "GTR 10HO &amp; OPCJA KOMFORT 20M ({{ price }} netto/m-c)",
+  "pack_move_no_gtr": "Brak GTR"
 }
