--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_fr_FR.json
@@ -3,5 +3,7 @@
   "pci_projects_project_storages_cold_archives_guides_storage-backup_description": "Tous les guides de stockage et sauvegarde",
   "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_title": "Créer un projet public cloud",
   "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Créer un projet public cloud",
-  "pci_projects_project_storages_cold_archives_add_container_success_secret_label": "Votre clé secrète S3 :"
+  "pci_projects_project_storages_cold_archives_add_container_success_secret_label": "Votre clé secrète S3 :",
+  "pci_projects_project_storages_cold_archive_containers_status_restore_date": "Jusqu'au {{ date }}",
+  "pci_projects_project_storages_cold_archive_containers_status_restore_date_tooltip": "La date à laquelle les fichiers restaurés seront supprimés du bucket S3."
 }
