--- a/packages/manager/apps/telecom/src/app/telecom/telephony/svaWallet/kyc/identity/translations/Messages_es_ES.json
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/svaWallet/kyc/identity/translations/Messages_es_ES.json
@@ -16,5 +16,46 @@
   "telephony_billingAccount_svaWallet_kyc_identity_company_crowdfundingPartner": "Mi empresa recibe financiación colectiva",
   "telephony_billingAccount_svaWallet_kyc_identity_company_marketplace": "Mi empresa es una marketplace",
   "telephony_billingAccount_svaWallet_kyc_identity_company_websiteUrl": "URL de su sitio web",
-  "telephony_billingAccount_svaWallet_kyc_identity_submit_edit_label": "Confirmar"
+  "telephony_billingAccount_svaWallet_kyc_identity_submit_edit_label": "Confirmar",
+  "telephony_billingAccount_svaWallet_kyc_identity_title": "Identidad del editor",
+  "telephony_billingAccount_svaWallet_kyc_message": "La validación le permite proteger su cuenta y contratar un número de pago.",
+  "telephony_billingAccount_svaWallet_kyc_infos": "Por favor, complete el formulario con atención. Tras la validación, algunos datos no serán modificables.",
+  "telephony_billingAccount_svaWallet_kyc_identity_type_pro": "Profesional",
+  "telephony_billingAccount_svaWallet_kyc_identity_type_reseller": "Profesional revendedor",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_name": "Razón social",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_identification_number": "SIRET",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_kind": "Tipo de empresa",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_kind_placeholder": "Elegir la tipología",
+  "telephony_billingAccount_svaWallet_kyc_company_kind_MICRO_ENTERPRISE": "Autónomo-empresario",
+  "telephony_billingAccount_svaWallet_kyc_company_kind_UE_UNLISTED_COMPANY": "Empresas cotizadas en un país de la UE o países terceros equivalentes",
+  "telephony_billingAccount_svaWallet_kyc_company_kind_UNLISTED_COMPANY": "Empresa no cotizada",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_description": "Descripción de la actividad",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_street_number": "Número de la vía",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_street_number_extra": "Suplemento (Opcional)",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_street_type": "Tipo de vía",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_street_name": "Nombre de calle",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_address_extra": "Suplemento (Opcional)",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_representative_postcode_residence": "Código postal",
+  "telephony_billingAccount_svaWallet_kyc_identity_company_address_cedex": "Cedex (Opcional)",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_city_residence": "Localidad",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_address_urban_district": "Distrito (Opcional)",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_country_residence": "País",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_title": "Contacto del editor",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_lastname": "Nombre",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_firstname": "Nombre",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_birthdate": "Fecha de nacimiento",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_birthcity": "Localidad de nacimiento",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_birthcountry": "País de nacimiento",
+  "telephony_billingAccount_svaWallet_kyc_identity_representative_nationality": "Nacionalidad",
+  "telephony_billingAccount_svaWallet_kyc_identity_bankAccount_holder": "Titular de la cuenta bancaria",
+  "telephony_billingAccount_svaWallet_kyc_identity_iban": "IBAN",
+  "telephony_billingAccount_svaWallet_kyc_identity_iban_format_error": "El formato del código IBAN no es correcto.",
+  "telephony_billingAccount_svaWallet_kyc_identity_beneficiaries_title": "Beneficiarios",
+  "telephony_billingAccount_svaWallet_kyc_identity_beneficiaries_representativeIsBeneficiary": "Mi representante es beneficiario",
+  "telephony_billingAccount_svaWallet_kyc_identity_requirements": "Reconozco ser el editor de los contenidos de los números SVA.",
+  "telephony_billingAccount_svaWallet_kyc_identity_requirements_reseller": " Reconozco ser revendedor de número SVA y certificación de conocer y aplicar las obligaciones a mis propios clientes.",
+  "telephony_billingAccount_svaWallet_kyc_identity_submit_label": "Siguiente paso",
+  "telephony_billingAccount_svaWallet_kyc_identity_submit_cancel": "Cancelar",
+  "telephony_billingAccount_svaWallet_kyc_identity_submit_lemonway": "LemonWay",
+  "telephony_billingAccount_svaWallet_kyc_identity_error": "Se ha producido un error al guardar la información: {{ errorMessage }}"
 }
