--- a/packages/manager/modules/exchange/src/onboarding/translations/Messages_de_DE.json
+++ b/packages/manager/modules/exchange/src/onboarding/translations/Messages_de_DE.json
@@ -1,5 +1,5 @@
 {
-  "exchange_onboarding_title": "Die professionelle E-Mail-Lösung Microsoft Exchange - die Referenzlösung auf dem Markt",
+  "exchange_onboarding_title": "Die professionelle E-Mail-Lösung Microsoft Exchange, Marktreferenz",
   "exchange_onboarding_order": "Bestellen",
   "exchange_onboarding_guide1_title": "Erste Schritte mit Hosted Exchange",
   "exchange_onboarding_guide1_description": "Hier erfahren Sie, wie Sie Ihren Hosted Exchange Dienst verwenden",
