--- a/packages/manager/modules/exchange/src/onboarding/translations/Messages_es_ES.json
+++ b/packages/manager/modules/exchange/src/onboarding/translations/Messages_es_ES.json
@@ -6,5 +6,8 @@
   "exchange_onboarding_guide2_title": "Gestionar la facturación de sus cuentas Exchange",
   "exchange_onboarding_guide2_description": "Cómo gestionar la facturación del servicio Exchange",
   "exchange_onboarding_guide3_title": "Primeros pasos con el servicio Private Exchange",
-  "exchange_onboarding_guide3_description": "Cómo configurar el servicio Private Exchange"
+  "exchange_onboarding_guide3_description": "Cómo configurar el servicio Private Exchange",
+  "exchange_onboarding_description_fr": "Aloje sus datos en Francia, disfrutando de la solución de correo profesional más completa",
+  "exchange_onboarding_description_eu": "Aloje sus datos en Europa y disfrute de la solución de correo profesional más completa del mercado",
+  "exchange_onboarding_description_ca": "Aloje sus datos en Canadá y disfrute de la solución de correo profesional más completa del mercado"
 }
