--- a/packages/manager/modules/office/src/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/modules/office/src/dashboard/translations/Messages_de_DE.json
@@ -14,13 +14,13 @@
   "microsoft_office_license_generals_informations_title": "Allgemeine Informationen",
   "microsoft_office_license_generals_informations_domain_title": "Domainnamen",
   "microsoft_office_license_edit": "Die Lizenzgruppe bearbeiten",
-  "microsoftOfficeLicense_tab_STATE": "Allgemein",
+  "microsoftOfficeLicense_tab_STATE": "Allgemeine",
   "microsoftOfficeLicense_tab_USER": "Lizenzen",
   "microsoftOfficeLicense_tab_CONSUMPTION": "Verbrauch",
   "microsoft_office_license_officeBusiness_serie_name": "Office Business Lizenzen",
   "microsoft_office_license_officeProPlus_serie_name": "Office Pro Plus Lizenzen",
   "microsoft_office_license_usage_stats": "Verbrauch des Monats",
-  "microsoft_office_license_peakcount": "Tägliches Lizenzmaximum",
+  "microsoft_office_license_peakcount": "Tägliches Lizenzierungsmaximum",
   "microsoft_office_license_detail_user_firstname": "Vorname",
   "microsoft_office_license_detail_user_lastname": "Name",
   "microsoft_office_license_detail_user_status": "Status",
@@ -28,15 +28,15 @@
   "microsoft_office_license_detail_user_activationEmail": "Aktivierungs-E-Mail",
   "microsoft_office_license_detail_user_licenses": "Lizenzen",
   "microsoft_office_license_detail_user_refresh": "Daten neu laden",
-  "microsoft_office_license_detail_user_no_users": "Keine Benutzer",
+  "microsoft_office_license_detail_user_no_users": "Kein Nutzer vorhanden",
   "microsoft_office_license_detail_user_delete_error": "Beim Löschen des Benutzers ist ein Fehler aufgetreten",
   "microsoft_office_license_detail_user_delete_success": "Benutzer wird gelöscht",
-  "microsoft_office_license_detail_user_delete_confirm": "Sind Sie sicher, dass Sie den Benutzer <strong>{{t0}}</strong> löschen möchten?",
+  "microsoft_office_license_detail_user_delete_confirm": "Sind Sie sicher, dass Sie den Benutzer {{t0}} <strong>löschen möchten</strong>?",
   "microsoft_office_license_detail_user_delete_title": "Löschen eines Benutzers",
-  "microsoft_office_license_detail_user_delete_info1": "Nach der Bestätigung wird der Benutzer automatisch gelöscht",
-  "microsoft_office_license_detail_user_delete_info2": "Da unsere Office 365 Produkte immer nach dem vergangenen Monat abgerechnet werden, werden Sie noch eine letzte Rechnung zu diesem Account erhalten",
+  "microsoft_office_license_detail_user_delete_info1": "Nach der Bestätigung wird der Benutzer gelöscht",
+  "microsoft_office_license_detail_user_delete_info2": "Da die Abrechnung unserer Office 365 Produkte auf dem Verbrauch des Vormonats basiert, erhalten Sie eine letzte Rechnung für diesen Account",
   "microsoft_office_license_detail_user_not_configure": "Nicht konfiguriert",
-  "microsoft_office_license_user_add": "Benutzer hinzufügen",
+  "microsoft_office_license_user_add": "Nutzer hinzufügen",
   "microsoft_office_license_user_order": "Weitere Lizenzen bestellen",
   "microsoft_office_license_detail_state_domainName": "Domainname",
   "microsoft_office_license_detail_state_txtEntry": "TXT-Eintrag",
@@ -53,20 +53,20 @@
   "microsoft_office_license_user_edit_password_info": "Passwort:",
   "microsoft_office_license_user_edit_password_confirm": "Bestätigung:",
   "microsoft_office_license_user_edit_password_email_field": "E-Mail-Adresse:",
-  "microsoft_office_license_user_edit_password_heading": "<strong>Sie sind im Begriff, das Passwort Ihres Accounts zu ändern.</strong><p>Möchten Sie fortfahren?</p>",
-  "microsoft_office_license_user_edit_password_conditions": "Achtung, das Passwort muss folgende Mindestanforderungen erfüllen: <ul><li>Mindestlänge 8 Zeichen</li><li>Höchstlänge 16 Zeichen</li><li>Muss mindestens 1 Kleinbuchstaben, 1 Großbuchstaben, 1 Ziffer oder 1 Sonderzeichen enthalten</li></ul>",
-  "microsoft_office_license_user_edit_password_empty": "Wenn Sie kein Passwort angeben, wird ein zufälliges Passwort erstellt und per E-Mail versandt",
+  "microsoft_office_license_user_edit_password_heading": "<strong>Sie sind im Begriff, das Passwort Ihres Accounts zu ändern</strong><p>Möchten Sie fortfahren?</p>",
+  "microsoft_office_license_user_edit_password_conditions": "Bitte beachten Sie, dass das Passwort nach folgenden Regeln vergeben werden muss: <ul><li>Mindestens 8 Zeichen</li><li>Maximal 16 Zeichen</li><li>Mindestens 1 Kleinbuchstabe, 1 Großbuchstabe, 1 Ziffer oder 1 Sonderzeichen</li></ul>",
+  "microsoft_office_license_user_edit_password_empty": "Wenn Sie kein Passwort angeben, wird dieses zufällig erstellt und per E-Mail versandt",
   "microsoft_office_license_user_edit_password_error": "Ungültiges Passwort",
   "microsoft_office_license_user_edit_confirm_error": "Die Passwörter müssen identisch sein",
-  "microsoft_office_license_user_edit_password_email": "E-Mail bearbeiten",
+  "microsoft_office_license_user_edit_password_email": "Die E-Mail bearbeiten",
   "microsoft_office_license_user_edit_password_email_details": "Standardmäßig wird das Passwort versandt an:",
-  "microsoft_office_license_user_edit_password_email_notify": "Wenn Sie kein Passwort festlegen, wird es zufällig erstellt und an die eingetragene E-Mail-Adresse versandt",
+  "microsoft_office_license_user_edit_password_email_notify": "Wenn Sie kein Passwort angeben, wird dieses zufällig erstellt und an die angegebene Adresse versandt",
   "microsoft_office_license_user_edit_password_email_details_change": "Sie können den Empfänger oben anpassen.",
   "microsoft_office_license_get_error": "Beim Abruf der Informationen ist ein Fehler aufgetreten.",
-  "microsoft_office_license_edit_password_success": "Ihr Passwort wurde erfolgreich geändert.",
+  "microsoft_office_license_edit_password_success": "Ihre Passwortänderung wurde erfolgreich durchgeführt.",
   "microsoft_office_license_edit_password_error": "Bei der Änderung des Passworts ist ein Fehler aufgetreten.",
   "microsoft_office_license_user_edit_password_nic_admin": "E-Mail-Adresse des Admin-Kontakts",
-  "microsoft_office_license_user_edit_password_default_email": "Als Standard-E-Mail verwenden",
+  "microsoft_office_license_user_edit_password_default_email": "Standard-E-Mail verwenden",
   "microsoft_office_license_detail_user_add_success": "Benutzer wird hinzugefügt",
   "microsoft_office_license_add_user_price_warning": "Es wird jeweils die Anzahl der im laufenden Monat aktiven Lizenzen in Rechnung gestellt.",
   "microsoft_office_license_add_user_domain_label": "Office Domain",
@@ -77,24 +77,24 @@
   "microsoft_office_license_add_user_required": "Pflichtangabe",
   "microsoft_office_license_add_user_confirm": "Folgender Benutzer wird hinzugefügt",
   "microsoft_office_license_add_user_license_none": "Wählen Sie eine Lizenz aus",
-  "microsoft_office_license_detail_user_add_error": "Beim Hinzufügen des Benutzers ist ein Fehler aufgetreten",
-  "microsoft_office_license_add_user_login_conditions": "Ihr Login muss zwischen 3 und maximal 20 Zeichen enthalten. Er kann Zahlen, Buchstaben sowie folgende Zeichen enthalten: - _ ! # $ % &amp; ' ^ ` { }",
-  "microsoft_office_license_add_user_login_condition_exception": "Er darf auch Punkte enthalten, sofern diese nach einem gültigen Zeichen und nicht vor einem anderen Punkt stehen.",
+  "microsoft_office_license_detail_user_add_error": "Beim Hinzufügen des Nutzers ist ein Fehler aufgetreten",
+  "microsoft_office_license_add_user_login_conditions": "Ihr Login muss zwischen 3 und maximal 20 Zeichen enthalten. Er kann Ziffern, Buchstaben und folgende Zeichen enthalten: - _ # $ % &amp; ^",
+  "microsoft_office_license_add_user_login_condition_exception": "Er kann auch Punkte enthalten, sofern ihnen ein zulässiges Zeichen vorangeht und ihnen kein weiterer Punkt folgt.",
   "microsoft_office_license_add_user_login_invalid_pattern": "Der Benutzername enthält ungültige Zeichen",
   "microsoft_office_license_add_user_login_minlength": "Der Benutzername muss mindestens {{t0}} Zeichen enthalten",
   "microsoft_office_license_add_user_login_maxlength": "Der Benutzername darf höchstens {{t0}} Zeichen enthalten",
   "microsoft_office_license_add_user_field_required": "Die mit {{t0}} markierten Felder sind Pflichtfelder.",
-  "microsoft_office_license_add_user_license_price_error": "Preisinformationen nicht verfügbar",
+  "microsoft_office_license_add_user_license_price_error": "Preis konnte nicht abgerufen werden",
   "microsoft_office_license_add_user_price_per_user": "Preispro Benutzer",
   "microsoft_office_license_add_user_price": "{{t0}} / Monat (zzgl. MwSt.)",
   "microsoft_office_license_order_user_price_warning": "Wenn Sie bestätigen, werden Sie zum Bestellschein weitergeleitet. Wenn die Zahlung abgeschlossen ist, kehren Sie hierher zurück, um Ihre neuen Benutzer zu konfigurieren.",
   "microsoft_office_license_order_user_license_label": "Lizenz-Typ",
   "microsoft_office_license_order_user_number_label": "Anzahl der Lizenzen",
-  "microsoft_office_license_order_user_license_none": "Wählen Sie einen Typ",
+  "microsoft_office_license_order_user_license_none": "Wählen Sie einen Typ aus",
   "microsoft_office_license_usage_period_label": "Zeitraum:",
-  "microsoft_office_license_usage_period_current": "Der laufende Monat",
-  "microsoft_office_license_usage_period_last": "Der letzte Monat",
-  "microsoft_office_license_usage_period_last3": "Die letzten 3 Monate",
+  "microsoft_office_license_usage_period_current": "Laufender Monat",
+  "microsoft_office_license_usage_period_last": "Im letzten Monat",
+  "microsoft_office_license_usage_period_last3": "In den letzten 3 Monaten",
   "microsoft_office_license_usage_period_last12": "Die letzten 12 Monate",
   "microsoft_office_license_usage_error": "Beim Abruf der Daten ist ein Fehler aufgetreten",
   "microsoft_office_license_empty_usage": "Es sind keine Verbrauchsdaten verfügbar",
@@ -102,14 +102,14 @@
   "microsoft_office_license_edit_save": "Speichern",
   "microsoft_office_license_edit_success": "Lizenzgruppe erfolgreich geändert",
   "microsoft_office_license_edit_error": "Fehler bei der Änderung der Lizenzgruppe",
-  "license_office_users_download_text": "Die Installationspakete für PC und Mac sind auf der <a href=\"https://portal.office.com/\" target=\"_blank\">Microsoft Office Seite</a> verfügbar.",
-  "license_office_users_download_info": "Für eine Installation auf einem Smartphone oder Tablet verwenden Sie den App Store Ihres Systems.",
+  "license_office_users_download_text": "Die Installationsprogramme für PC und MAC sind auf der Microsoft <a href=\"https://portal.office.com/\" target=\"_blank\">Office Website verfügbar</a>.",
+  "license_office_users_download_info": "Für Smartphones und Tablets begeben Sie sich direkt in Ihren App Store.",
   "license_office_users_download_id": "Die Zugangsdaten für Verbindung und Installation werden Ihnen per E-Mail zugesandt, sobald Sie eine neue Lizenz hinzufügen.",
   "license_office_guide": "Benötigen Sie Hilfe mit Ihren Office-365-Lizenzen?",
-  "license_office_guide_help": "Ziehen Sie unsere Online-Hilfen zu Rate.",
+  "license_office_guide_help": "Lesen Sie unsere Online-Anleitungen.",
   "microsoft_office_license_user_edit": "Benutzer bearbeiten",
-  "microsoft_office_license_edit_user_confirm": "Folgender Benutzer wird bearbeitet:",
-  "microsoft_office_license_detail_user_edit_success": "Die Veränderungen für den Benutzer wurden übernommen.",
+  "microsoft_office_license_edit_user_confirm": "Folgender Benutzer wird geändert:",
+  "microsoft_office_license_detail_user_edit_success": "Die Änderungen für den Benutzer wurden durchgeführt.",
   "microsoft_office_license_detail_user_edit_error": "Bei der Bearbeitung des Benutzers ist ein Fehler aufgetreten.",
   "microsoft_office_license_microsoft-365-apps-for-business-pp-nce": "Microsoft Office 365 Apps for Business",
   "microsoft_office_license_microsoft-365-apps-for-enterprise-pp-nce": "Microsoft Office 365 Apps for Enterprise"
