--- a/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_de_DE.json
+++ b/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_de_DE.json
@@ -15,5 +15,6 @@
   "purchaseOrders_form_add_purchase_cancel": "Abbrechen",
   "purchaseOrders_form_add_purchase_submit_REFERENCE_ORDER_success": "Ihre interne Referenz wurde erfolgreich erstellt!",
   "purchaseOrders_form_add_purchase_submit_PURCHASE_ORDER_success": "Ihre Purchase Order wurde erfolgreich erstellt!",
-  "purchaseOrders_form_add_purchase_submit_error": "Ihre Anfrage konnte nicht bearbeitet werden. Bitte versuchen Sie es später erneut."
+  "purchaseOrders_form_add_purchase_submit_error": "Ihre Anfrage konnte nicht bearbeitet werden. Bitte versuchen Sie es später erneut.",
+  "purchaseOrders_add_page_warning_ongoing_purchase": "Sie haben derzeit eine interne Referenz oder eine frühere Purchase Order ohne Enddatum. Sie können keine neue Referenz einrichten, ohne ein Enddatum für die bestehende Referenz anzugeben."
 }
