--- a/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_fr_CA.json
@@ -1,6 +1,7 @@
 {
   "purchaseOrders_add_page_title": "Créer une référence interne",
   "purchaseOrders_form_add_internal_reference": "Créer votre référence interne",
+  "purchaseOrders_add_page_warning_ongoing_purchase": "Vous avez actuellement une référence interne ou un purchase order antérieur sans date de fin. Il est impossible de mettre en place une nouvelle référence sans indiquer de date de fin sur celle existante.",
   "purchaseOrders_form_add_purchase_order": "Créer votre purchase order",
   "purchaseOrders_form_add_internal_reference_label": "Nom de la référence interne",
   "purchaseOrders_form_add_internal_reference_placeholder": "Référence interne",
