--- a/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_it_IT.json
+++ b/packages/manager/modules/billing/src/orders/purchaseOrders/new-purchase/translations/Messages_it_IT.json
@@ -15,5 +15,6 @@
   "purchaseOrders_form_add_purchase_cancel": "Annullare",
   "purchaseOrders_form_add_purchase_submit_REFERENCE_ORDER_success": "La tua referenza interna è stata creata!",
   "purchaseOrders_form_add_purchase_submit_PURCHASE_ORDER_success": "Il tuo purchase order è stato creato!",
-  "purchaseOrders_form_add_purchase_submit_error": "Non è stato possibile prendere in carico la tua richiesta. Ti preghiamo di riprovare."
+  "purchaseOrders_form_add_purchase_submit_error": "Non è stato possibile prendere in carico la tua richiesta. Ti preghiamo di riprovare.",
+  "purchaseOrders_add_page_warning_ongoing_purchase": "Disponi di una referenza interna o un purchase order anteriore senza data di fine. Non è possibile creare una nuova referenza interna senza indicare una data di fine su quella esistente."
 }
